<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_more"
        android:orderInCategory="10"
        android:showAsAction="ifRoom|withText"
        android:title="@string/item_more_text">
        <menu>
            <item
                android:id="@+id/item_main_about"
                android:icon="@drawable/ico_heart"
                android:orderInCategory="10"
                android:showAsAction="ifRoom|withText"
                android:title="@string/item_main_about_text">
            </item>
            <item
                android:id="@+id/item_main_share"
                android:icon="@drawable/ico_thumbs_up"
                android:orderInCategory="10"
                android:showAsAction="ifRoom|withText"
                android:title="@string/item_main_share_text">
            </item>
            <item
                android:id="@+id/item_main_version"
                android:icon="@drawable/ico_question_sign"
                android:orderInCategory="10"
                android:showAsAction="ifRoom|withText"
                android:title="@string/item_main_version_text">
            </item>
        </menu>
    </item>

</menu>