<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity_common" >

    <TextView
        style="@style/tv_common_title"
        android:layout_width="wrap_content"
        android:text="@string/g_tuling_xiaohua" />

    <TextView
        android:id="@+id/tv_tuling_xiaohua"
        style="@style/tv_common"
        android:layout_height="wrap_content" />

    <TextView style="@style/view_space" />

    <TextView
        style="@style/tv_common_title"
        android:layout_width="wrap_content"
        android:text="@string/g_tuling_miyu" />

    <TextView
        android:id="@+id/tv_tuling_miyu"
        style="@style/tv_common"
        android:layout_height="wrap_content" />

    <TextView style="@style/view_space" />

    <TextView
        style="@style/tv_common_title"
        android:layout_width="wrap_content"
        android:text="@string/g_tuling_naojin" />

    <TextView
        android:id="@+id/tv_tuling_naojin"
        style="@style/tv_common"
        android:layout_height="wrap_content" />

    <TextView style="@style/view_space" />

    <TextView
        style="@style/tv_common_title"
        android:layout_width="wrap_content"
        android:text="@string/g_tuling_gushi" />

    <TextView
        android:id="@+id/tv_tuling_gushi"
        style="@style/tv_common"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:scrollbars="vertical" />

</LinearLayout>